feat: Configura pasta para usar o ts

--- a/entendendo_typescript/index.html
+++ b/entendendo_typescript/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index de Estud0</title>
+    <title>Index de Estudos</title>
 </head>
 <body>
-    
+    <script src="./basico/basico.js"></script>
 </body>
 </html>
